--- a/HW7/HW7.X/nbproject/Makefile-genesis.properties
+++ b/HW7/HW7.X/nbproject/Makefile-genesis.properties
@@ -1,14 +1,14 @@
 #
-#Mon May 02 19:59:36 CDT 2022
+#Tue May 10 10:37:34 CDT 2022
 default.languagetoolchain.version=4.00
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.00\\packs\\Microchip\\PIC32MX_DFP\\1.5.259
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.00\\bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=e4472a864cace3fb7127149b7c727f38
 host.id=10o2-1qiy-va
-configurations-xml=042b6618ab180a6e70c809bc0b4bf68e
+configurations-xml=88d4874e0d5398c878e29925cc1778af
 default.com-microchip-mplab-mdbcore-snap-SnapToolImpl.md5=eaa336cefb7fc46db8b50b7b2b6e54ca
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e02ca5e9f5042ffd365b42ab82d3a9b
 user-defined-mime-resolver-xml=none
-proj.dir=C\:\\Users\\Oliver\\Documents\\15th Grade\\Spring\\ME433\\HW6\\HW6.X
+proj.dir=C\:\\Users\\Oliver\\Documents\\15th Grade\\Spring\\ME433\\New Folder\\HW7.X
 host.platform=windows
